==> 2237montala/BajaSemiActiveSuspension/src/CO_driver.c <==
#include "targetSpecific.h" /* Include HAL interfaces generated by cube MX. */
#include "301/CO_driver.h"

CO_ReturnError_t CO_CANmodule_init(
        CO_CANmodule_t         *CANmodule,
        void *CANptr,
		CO_CANrx_t              rxArray[],
        uint16_t                rxSize,
        CO_CANtx_t              txArray[],
        uint16_t                txSize,
        uint16_t                CANbitRate)
{
    uint16_t i;

    /* verify arguments */
    if(CANmodule==NULL || rxArray==NULL || txArray==NULL){
        return CO_ERROR_ILLEGAL_ARGUMENT;
    }

    // Save local pointer to the CO_CAN object so it can be used for interrupts
    RxFifo_Callback_CanModule_p = CANmodule;

    /* Configure object variables */
	CANmodule->CANptr = CANptr;
    CANmodule->rxArray = rxArray;
    CANmodule->rxSize = rxSize;
    CANmodule->txArray = txArray;
    CANmodule->txSize = txSize;
    CANmodule->CANerrorStatus = 0;
    CANmodule->CANnormal = false;
    //CANmodule->useCANrxFilters = (rxSize <= 32U) ? true : false;/* microcontroller dependent */
    CANmodule->useCANrxFilters = false;
    CANmodule->bufferInhibitFlag = false;
    CANmodule->firstCANtxMessage = true;
    CANmodule->CANtxCount = 0U;
    CANmodule->errOld = 0U;

    for(i=0U; i<rxSize; i++){
        rxArray[i].ident = 0U;
        rxArray[i].mask = 0xFFFFU;
        rxArray[i].object = NULL;
        rxArray[i].CANrx_callback = NULL;
    }
    for(i=0U; i<txSize; i++){
        txArray[i].bufferFull = false;
    }

    /* Configure CAN module registers */
    // Configuration is done with HAL
    CO_CANmodule_disable(CANmodule);

	// Set the HAL CAN variable to memory address we specified
	CanHandle = CANmodule->CANptr;

	HAL_CAN_MspDeInit(CanHandle);
	HAL_CAN_MspInit(CanHandle); /* NVIC and GPIO */

	CanHandle->Instance = CANx;
	CanHandle->Init.Mode = CAN_MODE_NORMAL;
	CanHandle->Init.SyncJumpWidth = CAN_SJW_1TQ;
	CanHandle->Init.TimeTriggeredMode = DISABLE;
	CanHandle->Init.AutoBusOff = DISABLE;
	CanHandle->Init.AutoWakeUp = DISABLE;
	CanHandle->Init.AutoRetransmission = ENABLE;
	CanHandle->Init.ReceiveFifoLocked = DISABLE;
	CanHandle->Init.TransmitFifoPriority = DISABLE;

    /* Configure CAN timing */
    // Hard coded in rn
    // TODO: Add different baud rates
    CanHandle->Init.TimeSeg1 = CAN_BS1_12TQ;
    CanHandle->Init.TimeSeg2 = CAN_BS2_2TQ;
    

    if(CANbitRate != 500) {
        return CO_ERROR_ILLEGAL_BAUDRATE;
    }

    CanHandle->Init.Prescaler = 6;

    if(HAL_CAN_Init(CanHandle) != HAL_OK)
    {
        /* Initialization Error */
        return CO_ERROR_TIMEOUT;
    }

    /* Configure CAN module hardware filters */
    if(CANmodule->useCANrxFilters){
        /* CAN module filters are used, they will be configured with */
        /* CO_CANrxBufferInit() functions, called by separate CANopen */
        /* init functions. */
        /* Configure all masks so, that received message must match filter */
    }
    else{
        /* CAN module filters are not used, all messages with standard 11-bit */
        /* identifier will be received */
        /* Configure mask 0 so, that all messages with standard identifier are accepted */
        // No hardware filters are used
        CAN_FilterTypeDef  FilterConfig;
        FilterConfig.FilterBank = 0;
        FilterConfig.FilterMode = CAN_FILTERMODE_IDMASK;
        FilterConfig.FilterScale = CAN_FILTERSCALE_32BIT;
        FilterConfig.FilterIdHigh = 0x0000;
        FilterConfig.FilterIdLow = 0x0000;
        FilterConfig.FilterMaskIdHigh = 0x0000;
        FilterConfig.FilterMaskIdLow = 0x0000;
        FilterConfig.FilterFIFOAssignment = CAN_RX_FIFO0;
        FilterConfig.FilterActivation = ENABLE;
        FilterConfig.SlaveStartFilterBank = 14;
        
        if(HAL_CAN_ConfigFilter(CanHandle, &FilterConfig) != HAL_OK)
        {
            /* Filter configuration Error */
            return CO_ERROR_TIMEOUT;
        }
    }
    return CO_ERROR_NO;
}

void CO_CANmodule_disable(CO_CANmodule_t *CANmodule){
    /* turn off the module */
	/* handled by HAL*/
    if(((CAN_HandleTypeDef *)(CANmodule->CANptr))->Instance == CAN1) {
        HAL_CAN_DeactivateNotification(CanHandle,
			CAN_IT_RX_FIFO0_MSG_PENDING | CAN_IT_RX_FIFO1_MSG_PENDING | CAN_IT_TX_MAILBOX_EMPTY);
	    HAL_CAN_Stop(CanHandle);
    }
	
}

CO_ReturnError_t CO_CANsend(CO_CANmodule_t *CANmodule, CO_CANtx_t *buffer){
    CO_ReturnError_t err = CO_ERROR_NO;

    /* Verify overflow */
    if(buffer->bufferFull){
        if(!CANmodule->firstCANtxMessage){
            /* don't set error, if bootup message is still on buffers */
            CANmodule->CANerrorStatus |= CO_CAN_ERRTX_OVERFLOW;
        }
        err = CO_ERROR_TX_OVERFLOW;
    }

    CO_LOCK_CAN_SEND();
    /* if CAN TX buffer is free, copy message to it */
    if(1 && CANmodule->CANtxCount == 0 && 
      (HAL_CAN_GetTxMailboxesFreeLevel(CanHandle) > 0 )){
        CANmodule->bufferInhibitFlag = buffer->syncFlag;

        // Temp variable to hold which mail box the transmitted message was put into
        uint32_t TxMailboxNum;

        // Convert CANOpen buffer to HAL header
        prepareTxHeader(&TxHeader, buffer);

        /* copy message and txRequest */
        if(HAL_CAN_AddTxMessage(CanHandle,&TxHeader,&buffer->data[0],&TxMailboxNum)	!= HAL_OK)
		{
			err = CO_ERROR_TIMEOUT;
		}
    }
    /* if no buffer is free, message will be sent by interrupt */
    else{
        buffer->bufferFull = true;
        CANmodule->CANtxCount++;
    }
    CO_UNLOCK_CAN_SEND();

    return err;
}
